# navier-stokes

./: .gitignore  BUILD.md  CMakeLists.txt  DEPENDENCIES.md  LICENSE  README.md  compile_commands.json  headless.cpp  main.cpp  navier_stokes.hpp  render.cpp  util.hpp
cpu/: main.cpp
docs/: benchmarks.ipynb  navier_stokes_new  navier_stokes_old  pyproject.toml
kernel_analysis/add/: README.md  addSource.cpp  addSourceOld.cpp  addSourceOld_rv64gcv.S  addSourceOld_rv64gcv.mca  addSourceOld_znver5.S  addSourceOld_znver5.mca  addSource_rv64gcv.S  addSource_rv64gcv.mca  addSource_znver5.S  addSource_znver5.mca
shaders/: add.comp.glsl  add.spv
solver/: generic.cpp  solver.hpp
